# deadlock-api

./: .env.example  .gitattributes  .gitignore  .mise.toml  .oxfmtrc.jsonc  .oxlintrc.json  ACTION-PLAN.md  CLAUDE.md  LICENSE  README.md  biome.json  env.d.ts  eslint.config.js  lefthook.yml  migration.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-router.config.ts  tsconfig.cloudflare.json  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
api/: .dockerignore  .env.example  .env.testing.example  .gitignore  Cargo.toml  Dockerfile  README.md  _typos.toml  build.rs  docker-compose.testing.yaml  docker-compose.yaml
api/.github/workflows/: main.yml
api/.sqlx/: query-00d111482bcd0d21702ac775f982d5548fcc8b36bd2b8d73768cc29338a3dede.json  query-11999e5f7ce2d8e237c3aca5b4688674f3c048f2599a24164d70195a305dc701.json  query-11afe15068ac36c5e58311988fbf0e1929aa5c6020c42df4c21026a9881f02bd.json  query-2b6ccd439e0435735f4e20d51185943a0f8809ad0ee9fe8d84d7e2012ad1b43a.json  query-2bb98362b92ff538e342b9216be345bcca5cbfdfbadea3f8c614392227d9b1d9.json  query-2c92c310a3daf5e58aa82a528cffdb36cc74ffb172d5a83db328bc315c1757b2.json  query-37fe6f76840b47d4b210a76dadc7bc74a451ea54d934ca641dc2819b47019f67.json  query-41192d73636ada7eb9d0444387b63e443004f74fde977dc169a1735d115bd12d.json  query-4a2f734890283300d89e30f576926c643d20c4d37e46b3ebdceb3cec955867d1.json  query-5daed9b3437af14811e5d3999fec43f7f166d3bbfc53886f047c6cb7b639d6ad.json  query-67c01eab6cb60bc1f2df9f9fe1808e9e9087506d1548a83e25fd30a64cb84b6b.json  query-685593dd1cfbe53d108a88321ed783236b57c9b55183fe9d44dec920c1ac6c85.json  query-7170eb45f1dbb7e16e48ba305ca42de21339ab342d3c96739709c7c46a81ff32.json  query-7cdfec7f78419aa08e0f29fade00a1277da8e1c914bfb000c733c3523dfd7ab9.json  query-856e734119b88f893973dfddf1ad9682c7b0add2ded484786123ca6c1ac7bdef.json  query-8cf78c7a42cd4ec88d6abe898c1b230083f77d13e876eb29db2e203bac23c305.json  query-93815af5aa0abdbe2bddea88ddef8e669f1a632932adb61ac4dfceb2eb4505bd.json  query-98fa50e42ef1dc4914ac618746aec9cbee2b58604684ee9de82f51a5c90b63cb.json  query-a0abe0aa0541c9ed69dd0149ee78c3df8dc03ba13709fdf47a9ac797b05e96ec.json  query-a402bb81ed31de79e9d206f5ddffd42b519411a451fdaeeaf88f426e7eaec425.json  query-c13fd7f6802188457a8303a41a462da3016ddd3c2e2d8e1753f7b00467928e70.json  query-d7f5ed9c18120dd1127b278170c617db48ef59776b233b088cf343f669ea5255.json  query-e31e23e84f949796064bfd4a68cbb99cf954157b619ba5fbc40175ca9468daeb.json  query-e55bc220297eded927b16ee63e0bd49ce53f871752c7bb218e71a23fe0c31764.json  query-e91af9e115ef5b769e4ab94501f8ae917808982272eb519ce03e54581ead4710.json  query-f2393d8369dc0f7d101fbde4861cd2348c838e9954ab874b1f7f390bf550f47b.json  query-f7ac8d3e1643b5e7371a68659278631a811f1702ef6322d254706d78219ad6da.json
api/deployer/: Dockerfile  deployer.py  pyproject.toml
api/model/: calibration.json  lgbm.onnx.zst  xgb.onnx.zst
api/src/: api_doc.rs  error.rs  lib.rs  main.rs  test_helpers.rs
api/src/context/: batchers.rs  config.rs  mod.rs  state.rs
api/src/middleware/: cache.rs  cache_bust.rs  cors.rs  mod.rs  rate_limit.rs
api/src/routes/: mod.rs
api/src/routes/v1/: mod.rs
api/src/routes/v2/: mod.rs
api/src/services/: clickhouse_batcher.rs  clickhouse_insert_batcher.rs  cohort_agg_refresh.rs  game_server.rs  mod.rs  rank_predictor.rs  steam_batcher.rs  steam_search_index.rs
api/src/services/assets/: client.rs  index.rs  mod.rs
api/src/services/patreon/: extractor.rs  mod.rs  steam_accounts_repository.rs  types.rs  (+1 more)
api/src/utils/: compression.rs  json_stream.rs  kv3.rs  localization.rs  mod.rs  observability.rs  parse.rs  proptest_utils.rs  types.rs
api/tests/: heroes_v2_snapshots.rs
api/tests/heroes_snapshots/: heroes_english_v6514.snap  heroes_german_v6514.snap
api/tests/it/: analytics.rs  info.rs  main.rs  player.rs  sql.rs
live-events/: Cargo.toml  Dockerfile
live-events/src/: events.rs  lib.rs  utils.rs
live-events/src/demo_parser/: types.rs  visitor.rs
tools/: Cargo.toml  Dockerfile  docker-compose.yaml
tools/.github/workflows/: rust-docker-images.yaml
tools/.sqlx/: query-1b1a7bf64654ed9a4d008cae3eeaca60b71fa8b6af6261ee8c84dd841232ca17.json
tools/active-matches-scraper/: Cargo.toml
tools/active-matches-scraper/src/: main.rs
tools/builds-fetcher/: Cargo.toml
tools/builds-fetcher/src/: main.rs
tools/common/: Cargo.toml
tools/common/src/: assets.rs  clients.rs  prioritization.rs  retry.rs  steam.rs  telemetry.rs  utils.rs
tools/demo-analyzer/: Cargo.toml
tools/demo-analyzer/src/: hashes.rs  main.rs  models.rs  streaming_demo.rs  visitor.rs
tools/friends-rank-fetcher/: Cargo.toml
tools/friends-rank-fetcher/src/: main.rs
tools/history-fetcher/: Cargo.toml
tools/history-fetcher/src/: main.rs  types.rs
tools/hltv-scraper/: Cargo.toml
tools/hltv-scraper/src/: active_matches.rs  cli.rs  easy_poll.rs  main.rs
tools/ingest-worker/: Cargo.toml
tools/ingest-worker/src/: main.rs
tools/matchdata-downloader/: Cargo.toml
tools/matchdata-downloader/src/: main.rs  models.rs
tools/migrations/clickhouse/: 00_create_active_matches_table.sql  02_create_match_info_table.sql  03_create_match_player_table.sql  09_create_player_match_history_table.sql  20_create_steam_profiles_table.sql  22_create_leaderboard_table.sql  23_create_hero_leaderboard_table.sql  24_create_demo_player_builds_table.sql  24_create_demo_player_table.sql  25_create_game_server_metrics_table.sql  26_add_match_player_hero_stats_projection.sql  27_add_steam_profiles_personaname_ngram_index.sql  28_add_steam_observed_name_refresh_signal.sql  29_add_match_player_item_stats_projection.sql  30_add_match_player_upgrade_item_columns.sql  31_create_item_cohort_stats_agg.sql  32_cohort_agg_incremental.sql
tools/migrations/postgres/: 09_add_user_deleted_column.sql
tools/salt-scraper/: Cargo.toml
tools/salt-scraper/src/: main.rs  models.rs
tools/steam-profile-fetcher/: Cargo.toml
tools/steam-profile-fetcher/src/: main.rs  models.rs  steam_api.rs
tools/update-assets-tables/: Cargo.toml
tools/update-assets-tables/src/: main.rs  models.rs
(+1182 files in other folders)
