[package]
name = "deadlock-api-rust"
version = "0.1.0"
edition = "2024"
description = "API for Deadlock game data"
repository = "https://github.com/deadlock-api/deadlock-api"
license = "MIT"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "http2", "zstd", "gzip", "form"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
redis = { version = "1.2.0", default-features = false, features = ["tokio-comp"] }
clickhouse = { version = "0.15.0", features = ["chrono", "uuid"] }
sqlx = { version = "0.8.6", features = ["chrono", "derive", "postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
cached = { version = "0.59.0", features = ["async", "serde"] }
axum = "0.8.9"
utoipa-axum = "0.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
object_store = { version = "0.13.2", features = ["aws"], default-features = false }
tower = { version = "0.5.3", features = ["limit", "tokio"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-http = { version = "0.6.8", features = ["compression-full", "cors", "decompression-full", "normalize-path", "trace", "limit"] }
tracing = "0.1.44"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
axum-prometheus = "0.10.0"
itertools = "0.14.0"
futures = "0.3.32"
snap = "1.1.1"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "2239ea7df0984240c292c691967eccca69556c5b", features = ["gc-client", "serde"] }
prost = "0.14.3"
base64 = "0.22.1"
tryhard = "0.5.2"
async-compression = { version = "0.4.41", features = ["bzip2", "zstd", "tokio"] }
strum = { version = "0.28.0", features = ["derive"] }
axum-extra = { version = "0.12.6", features = ["query"] }
metrics = "0.24.3"
bytes = { version = "1.11.1", features = ["serde"] }
thiserror = "2.0.18"
rand = "0.10.1"
quick-xml = { version = "0.39.2", features = ["serde", "serialize"] }
serde-env = "0.3.0"
regex = "1.12.3"
mimalloc = "0.1.48"
urlencoding = "2.1.3"
url = "2.5.8"
aes-gcm = "0.10"
hex = "0.4"
hmac = "0.13"
md5 = { package = "md-5", version = "0.11" }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
ort = "2.0.0-rc.12"
ndarray = "0.17.2"

[dev-dependencies]
clickhouse-sql-parser = { git = "https://github.com/raimannma/clickhouse-antlr4", version = "0.1.0" }
proptest = "1"
proptest-derive = "0.8"
rstest = "0.26.1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis", "clickhouse", "minio"] }

# Optimize external deps (the ANTLR-based `clickhouse-sql-parser` is the
# proptest bottleneck). Workspace code stays unoptimized for fast rebuilds.
[profile.test.package."*"]
opt-level = 3
