[package]
name = "deadlock-api-rust"
version = "0.1.0"
edition = "2024"
description = "API for Deadlock game data"
repository = "https://github.com/deadlock-api/deadlock-api"
license = "MIT"

[dependencies]
reqwest = { version = "0.13.4", features = ["json", "http2", "zstd", "gzip", "form"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
opentelemetry = { version = "0.32", features = ["logs", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["logs", "trace"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "logs", "trace"] }
opentelemetry-appender-tracing = { version = "0.32", features = ["experimental_metadata_attributes", "experimental_span_attributes"] }
tracing-opentelemetry = "0.33"
redis = { version = "1.2.2", default-features = false, features = ["tokio-comp"] }
clickhouse = { version = "0.15.1", features = ["chrono", "uuid"] }
sqlx = { version = "0.9.0", features = ["chrono", "derive", "postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
cached = { version = "2.0", features = ["async", "serde"] }
axum = "0.8.9"
utoipa-axum = "0.2.0"
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.45", features = ["serde"] }
serde_json = "1.0.150"
object_store = { version = "0.13.2", features = ["aws"], default-features = false }
tower = { version = "0.5.3", features = ["limit", "tokio"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-http = { version = "0.7.0", features = ["compression-full", "cors", "decompression-full", "normalize-path", "trace", "limit"] }
tracing = "0.1.44"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
axum-prometheus = "0.10.0"
itertools = "0.14.0"
futures = "0.3.32"
snap = "1.1.1"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "d4ce19ea77083bdc4db690bbd906659f80f34be4", features = ["gc-client", "serde"] }
prost = "0.14.4"
base64 = "0.22.1"
tryhard = "0.5.2"
async-compression = { version = "0.4.42", features = ["bzip2", "zstd", "tokio"] }
strum = { version = "0.28.0", features = ["derive"] }
axum-extra = { version = "0.12.6", features = ["query"] }
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
# Pinned: 0.24.4/0.24.5 break counter aggregation (counters stop incrementing past 1).
metrics = "=0.24.3"
bytes = { version = "1.11.1", features = ["serde"] }
thiserror = "2.0.18"
rand = "0.10.1"
quick-xml = { version = "0.40.1", features = ["serde", "serialize"] }
serde-env = "0.3.0"
regex = "1.12.4"
memchr = "2"
mimalloc = "0.1.52"
urlencoding = "2.1.3"
url = "2.5.8"
aes-gcm = "0.10"
hex = "0.4"
hmac = "0.13"
md5 = { package = "md-5", version = "0.11" }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "load-dynamic", "ndarray", "tracing", "copy-dylibs", "api-24", "tls-native"] }
ndarray = "0.17.2"
async-trait = "0.1.89"
tantivy = { version = "0.26.1", features = ["zstd-compression"] }
arc-swap = "1.9.1"
cssparser = "0.37"
indexmap = { version = "2", features = ["serde"] }
murmur2 = "0.1.0"

[dev-dependencies]
clickhouse-sql-parser = { git = "https://github.com/raimannma/clickhouse-antlr4", version = "0.1.0" }
proptest = "1"
proptest-derive = "0.8"
rstest = "0.26.1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis", "clickhouse", "minio"] }
insta = { version = "1", features = ["json"] }

# Optimize external deps (the ANTLR-based `clickhouse-sql-parser` is the
# proptest bottleneck). Workspace code stays unoptimized for fast rebuilds.
[profile.test.package."*"]
opt-level = 3
