[package]
name = "deadlock-live-events"
version = "0.1.0"
edition = "2024"
description = "API for Deadlock live events"
repository = "https://github.com/deadlock-api/deadlock-live-events"
license = "MIT"

[dependencies]
reqwest = { version = "0.13.4", features = ["json", "http2", "gzip"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tower-layer = "0.3.3"
tower-http = { version = "0.7.0", features = ["cors", "normalize-path", "trace", "limit"] }
tracing = "0.1.44"
futures = "0.3.32"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "d4ce19ea77083bdc4db690bbd906659f80f34be4", features = ["serde", "user-msgs", "game-msgs"] }
prost = "0.14.4"
tryhard = "0.5.2"
strum = { version = "0.28.0", features = ["derive"] }
haste = { git = "https://github.com/deadlock-api/haste.git", rev = "4a91bbfd36a90bb4eb9b215a80fccd59250d5051" }
async-stream = "0.3.6"
thiserror = "2.0.18"
serde-env = "0.3.0"
bytes = "1.11.1"
