[workspace]
members = ["salt-scraper", "hltv-scraper", "ingest-worker", "matchdata-downloader", "active-matches-scraper", "builds-fetcher", "common", "history-fetcher", "steam-profile-fetcher", "update-assets-tables", "demo-analyzer"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
async-compression = "0.4.42"
base64 = "0.22.1"
cached = "0.59.0"
clap = { version = "4.6.1", features = ["derive"] }
clickhouse = "0.15.0"
common = { version = "0.1.0", path = "common" }
fred = { version = "10.1.0", features = ["i-hexpire"] }
futures = "0.3.32"
itertools = "0.14.0"
metrics = "0.24.3"
object_store = { version = "0.13.2", features = ["aws"] }
prost = "0.14.3"
rand = "0.10.1"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
sqlx = "0.8.6"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tryhard = "0.5.2"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "63a9001f9bd1bb9095cc5c503ec3db80085f6bae" }
haste = { git = "https://github.com/deadlock-api/haste.git", rev = "b1d693dafc3f6290b4b1c0984cf98503a6643507" }
