[workspace]
members = ["salt-scraper", "hltv-scraper", "ingest-worker", "matchdata-downloader", "active-matches-scraper", "builds-fetcher", "common", "history-fetcher", "steam-profile-fetcher", "update-assets-tables", "demo-analyzer", "friends-rank-fetcher"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
async-compression = "0.4.42"
base64 = "0.22.1"
cached = "2.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
clickhouse = "0.15.1"
common = { version = "0.1.0", path = "common" }
fred = { version = "10.1.0", features = ["i-hexpire"] }
futures = "0.3.32"
itertools = "0.14.0"
# Pinned: 0.24.4/0.24.5 break counter aggregation (counters stop incrementing past 1).
metrics = "=0.24.3"
object_store = { version = "0.13.2", features = ["aws"] }
opentelemetry = { version = "0.32", features = ["logs", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["logs", "trace"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "logs", "trace"] }
opentelemetry-appender-tracing = { version = "0.32", features = ["experimental_metadata_attributes"] }
prost = "0.14.4"
rand = "0.10.1"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
sqlx = "0.9.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-opentelemetry = "0.33"
tryhard = "0.5.2"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "5fd2477e8f0868fb2d75c8a99bed6e336da4f3dd" }
haste = { git = "https://github.com/deadlock-api/haste.git", rev = "0518c57967b5751bda383ae7249153568d8a00cd", features = ["async"] }
