[package]
name = "active-matches-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clickhouse = { workspace = true, features = ["time"] }
common = { workspace = true }
delay_map = "0.4.1"
metrics = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_repr = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
