[package]
name = "builds-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["macros", "postgres", "runtime-tokio", "time"] }
time = "0.3.47"
tokio = { workspace = true }
tracing = { workspace = true }
valveprotos = { workspace = true, features = ["gc-client", "serde"] }
