[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clickhouse = { workspace = true }
fred = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = "0.18"
object_store = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["macros", "postgres", "runtime-tokio", "time"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tryhard = { workspace = true }
valveprotos = { workspace = true, features = ["gc-client", "serde"] }
