[package]
name = "demo-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-compression = { version = "0.4", features = ["tokio", "bzip2"] }
clap = { version = "4", features = ["derive", "env"] }
clickhouse = { version = "0.15.0", features = ["time"] }
common = { version = "0.1.0", path = "../common" }
dungers = { git = "https://github.com/deadlock-api/dungers.git", rev = "5e1e2aac76a027987911de3ef3d23ecfd992a7fb", features = ["varint"] }
futures = "0.3.32"
haste = { git = "https://github.com/deadlock-api/haste.git", rev = "714492f67995f0305732076cdd3cc1885a454dc9" }
metrics = "0.24.3"
os_pipe = "1"
prost = "0.14.3"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
snap = "1.1.1"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tryhard = "0.5.2"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "9625c0784beca10634442ef11ede5f022ab186da", features = ["gc-client"] }
