[package]
name = "demo-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true, features = ["tokio", "bzip2"] }
clap = { workspace = true, features = ["env"] }
clickhouse = { workspace = true, features = ["time"] }
common = { workspace = true }
dungers = { git = "https://github.com/deadlock-api/dungers.git", rev = "5e1e2aac76a027987911de3ef3d23ecfd992a7fb", features = ["varint"] }
futures = { workspace = true }
haste = { workspace = true }
metrics = { workspace = true }
os_pipe = "1"
prost = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
snap = "1.1.1"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
valveprotos = { workspace = true, features = ["gc-client"] }
