[package]
name = "demo-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true, features = ["tokio", "bzip2"] }
clap = { workspace = true, features = ["env"] }
clickhouse = { workspace = true, features = ["time"] }
common = { workspace = true }
futures = { workspace = true }
haste = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
valveprotos = { workspace = true, features = ["gc-client"] }
