[package]
name = "friends-rank-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["macros", "postgres", "runtime-tokio", "time"] }
tokio = { workspace = true }
tracing = { workspace = true }
