[package]
name = "history-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clickhouse = { workspace = true }
common = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
tokio = { workspace = true }
tracing = { workspace = true }
valveprotos = { workspace = true, features = ["gc-client", "serde"] }
