[package]
name = "hltv-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true, features = ["tokio", "bzip2", "zstd"] }
axum = "0.8.9"
base64 = { workspace = true }
cached = { workspace = true, features = ["async", "async_tokio_rt_multi_thread"] }
clap = { workspace = true, features = ["env"] }
common = { workspace = true }
dashmap = "6.1.0"
fred = { workspace = true }
haste = { workspace = true }
itertools = { workspace = true }
jiff = { version = "0.2.23", features = ["serde"] }
lru = "0.17.0"
metrics = { workspace = true }
object_store = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
valveprotos = { workspace = true, features = ["user-msgs"] }
