[package]
name = "ingest-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.41", features = ["tokio", "bzip2"] }
clickhouse = { version = "0.14.2", features = ["test-util", "time"] }
futures = "0.3.32"
prost = "0.14.3"
object_store = { version = "0.13.2", features = ["aws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "9625c0784beca10634442ef11ede5f022ab186da", features = ["gc-client"] }
metrics = "0.24.3"
tracing = "0.1.44"
tryhard = "0.5.2"
common = { version = "0.1.0", path = "../common" }
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
