[package]
name = "ingest-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bzip2 = "0.6"
bytes = "1"
clap = { workspace = true }
clickhouse = { workspace = true, features = ["test-util", "time"] }
common = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
object_store = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
valveprotos = { workspace = true, features = ["gc-client"] }
