[package]
name = "matchdata-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cached = { workspace = true, features = ["async", "tokio"] }
clickhouse = { workspace = true, features = ["time", "test-util"] }
common = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
object_store = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
time = "0.3.47"
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
