[package]
name = "salt-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clickhouse = { workspace = true }
common = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tryhard = { workspace = true }
valveprotos = { workspace = true, features = ["gc-client"] }
