[package]
name = "steam-profile-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
cached = { workspace = true, features = ["async", "tokio"] }
clickhouse = { workspace = true }
common = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_repr = { workspace = true }
sqlx = { workspace = true, features = ["macros", "postgres", "runtime-tokio"] }
tokio = { workspace = true }
tracing = { workspace = true }
