[package]
name = "update-assets-tables"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clickhouse = { workspace = true }
common = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_repr = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
